chore: update version to 2.0.4 and implement pom.xml snapshot detection logic